# openstack-ansible-example

./: README.md  requirements.txt  setup.cfg
scripts/: bootstrap-ansible.sh  scripts-library.sh
