[metadata]
name = openstack-ansible-example
summary = Ansible playbooks for deploying OpenStack
description-file = README.md
author = D G Lee
author-email = lyqgenius@vip.qq.com
home-page = https://github.com/ansible-example/openstack-ansible-example
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
